# replenishment

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: release_checklist.yml
.github/workflows/: ci.yml  release.yml
notebooks/: generated_data_example.ipynb  k_rmse_safety_stock_optimization_example.ipynb  mean_forecast_fill_rate_example copy.ipynb  mean_forecast_policy_variants_example.ipynb  mean_forecast_safety_stock_example.ipynb  mean_forecast_service_level_probability_example.ipynb  percentile_optimization_example.ipynb  percentile_optimization_manual_step_by_step.ipynb  stock_replenishment_example.ipynb  stress_test_example.ipynb
src/replenishment/: __init__.py  aggregation.py  io.py  optimization.py  plotting.py  policies.py  service_levels.py  simulation.py
tests/: test_io.py  test_simulation.py
