[project]
name = "replenishment"
version = "0.1.0"
description = "Stock replenishment simulation library."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.8", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
